--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -5,13 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class and ID Selectors</title>
+    <style>
+      .odd {
+        background-color: lightpink;
+        font-family: Verdana, DejaVu Sans, sans-serif;
+      }
+      #idTwo {
+        font-size: 36px;
+        color: blue;
+      }
+      #idThree {
+        font-size: 24px;
+      }
+      #idFour {
+        font-size: 24px;
+        background-color: lightgreen;
+        font-weight: bold;
+      }
+    </style>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="odd">Number 1 - I'm a class!</p>
+    <div id="idTwo">Number 2 - I'm one ID.</div>
+    <p class="odd" id="idThree">Number 3 - I'm a class, but cooler!</p>
+    <div id="idFour">Number 4 - I'm another ID.</div>
+    <p class="odd">Number 5 - I'm a class!</p>
   </body>
 </html>
