--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grouping Selectors</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+      .me,
+      .noMe {
+        font-size: 28px;
+        font-family: Helvetica, Times New Roman, sans-serif;
+      }
+      .me {
+        background-color: black;
+        color: white;
+      }
+      .noMe {
+        background-color: yellow;
+      }
+    </style>
   </head>
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button class="me">Click Me!</button>
+    <button class="noMe">No, Click Me!</button>
   </body>
 </html>
